--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <body>
         <header>
-            <div class="nav">Yarn Warehouse</div>
-            <div class="nav">Testimonials</div>
-            <div class="nav">Products</div>
-            <div class="nav">Contact</div>
+            <div class="n">Yarn Warehouse</div>
+            <div class="a">Testimonials</div>
+            <div class="v">Products</div>
+            <div class="i">Contact</div>
             <div class="right">
 	            <i class="fa fa-twitter"></i>
 	            <i class="fa fa-facebook-square"></i>
