--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </header>
 
         <div class="most">
+        	<img href="img/yarn.jpg" title="yarn" alt"Image of yarn">
             <div class="testimonials">
                 <h2 id="testy">Testimonials</h2>
                 <div class="pure-g">
