--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     <body>
         <header>
             <div class="n">Yarn Warehouse</div>
-            <div class="a">Testimonials</div>
-            <div class="v">Products</div>
-            <div class="i">Contact</div>
+            <div class="a"><a href="#testimonials">Testimonials</a></div>
+            <div class="v"><a href="#products">Products</a></div>
+            <div class="i"><a href="#contact">Contact</a></div>
             <div class="right">
 	            <i class="fa fa-twitter"></i>
 	            <i class="fa fa-facebook-square"></i>
 	        </div>
         </header>
 
+ 		<img src="img/yarn.jpg" title="Yarn" alt"Image of yarn">
+ 		
         <div class="most">
-        	<img href="img/yarn.jpg" title="yarn" alt"Image of yarn">
             <div class="testimonials">
-                <h2 id="testy">Testimonials</h2>
+                <h2 id="testimonials">Testimonials</h2>
                 <div class="pure-g">
                     <div class="pure-u-1-2"><p>Person A</p></div>
                     <div class="pure-u-1-2"><p>Person B</p></div>
@@ -35,12 +36,13 @@
                     <div class="pure-u-1-2"><p>Person D</p></div>
                 </div>
             </div>
-            <div class="products pure-g">
-                <div class="pure-u-1-4"><p>Product A</p></div>
-                <div class="pure-u-1-4"><p>Product B</p></div>
-                <br>
-                <div class="pure-u-1-4"><p>Product C</p></div>
-                <div class="pure-u-1-4"><p>Product D</p></div>
+            <div class="products">
+                <h2 id="products">Products</h2>
+                <div class="pure-g">
+	                <div class="pure-u-1-4"><p>Product A</p></div>
+	                <div class="pure-u-1-4"><p>Product B</p></div>
+	                <div class="pure-u-1-4"><p>Product C</p></div>
+	                <div class="pure-u-1-4"><p>Product D</p></div>
             </div>
             <div class="contact pure-g">
 
